tests/e2e-openshift-tshirt-sizes/tshirt-size-oauth-proxy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: tshirt-size-oauth-proxy
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: 00-install-storage.yaml
    - assert:
        file: 00-assert.yaml
  - name: step-01
    try:
    - apply:
        file: 01-install-tempo.yaml
    - assert:
        file: 01-assert.yaml
